[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Sreethan Kudikala <sreethan.thykudikala@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.14"
flask = "^3.0.0"
gunicorn = "^21.2.0"
openai = "^1.3.7"


[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"